# poker-trainer

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/: validation.json
.codex/skills/: README.md
.codex/skills/celery-patterns/: SKILL.md
.codex/skills/code-quality/: SKILL.md
.codex/skills/data-fetching/: SKILL.md  gotchas.md
.codex/skills/django-extensions/: SKILL.md
.codex/skills/django-forms/: SKILL.md
.codex/skills/django-models/: SKILL.md
.codex/skills/django-templates/: SKILL.md
.codex/skills/docs-sync/: SKILL.md
.codex/skills/frontend-design/: SKILL.md
.codex/skills/htmx-patterns/: SKILL.md
.codex/skills/new-data-table/: SKILL.md  gotchas.md
.codex/skills/new-form/: SKILL.md  gotchas.md
.codex/skills/new-page/: SKILL.md  gotchas.md
.codex/skills/onboard/: SKILL.md
.codex/skills/pr-review/: SKILL.md
.codex/skills/pr-summary/: SKILL.md
.codex/skills/react-hook-form-zod/: SKILL.md  gotchas.md
.codex/skills/react-patterns/: SKILL.md  gotchas.md
.codex/skills/systematic-debugging/: SKILL.md
.codex/skills/ticket/: SKILL.md
apps/poker_engine/: __init__.py  bots.py  engine.py  evaluator.py  llm.py  tests.py
apps/tables/: admin.py  apps.py  consumers.py  llm.py  models.py  routing.py  selectors.py  services.py  tests.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
docs/: milestones.md
frontend/: .gitignore  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+20 files in other folders)
