[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-trainer"
version = "0.1.0"
description = "Range-based poker training app with deterministic gameplay and AI coaching."
requires-python = ">=3.12"
dependencies = [
  "Django>=5.1,<6.0",
  "channels>=4.2,<5.0",
  "daphne>=4.1,<5.0",
  "djangorestframework>=3.15,<4.0",
  "django-cors-headers>=4.4,<5.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-django>=4.9,<5.0",
  "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "apps*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
